--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "laravel/ui": "^4.1"
+        "laravel/ui": "^4.1",
+        "laravelcollective/html": "^6.4",
+        "spatie/laravel-html": "^3.2",
+        "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
         "andyabih/laravel-to-uml": "^1.0",
